Fix words being cutoff on small screens

--- a/frontend/searchle/components/wordPuzzle/word-puzzle.module.scss
+++ b/frontend/searchle/components/wordPuzzle/word-puzzle.module.scss
@@ -16,6 +16,7 @@
   flex-grow: 1;
   padding: 10px;
   width: 100%;
+  overflow-y: scroll;
 }
 
 .puzzleWord {
